Some styling updates, and fix the bottomNav transparency issue on iOS for when google maps is showing

--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -66,3 +66,17 @@ h1,h2,h3 {
 .nt-drawer__header-image {
   color: const(grey);
 }
+
+.red {
+  background-color: #ec1c24;
+}
+.red-text {
+  color: #ec1c24;
+}
+
+.blue {
+  background-color: #184195;
+}
+.blue-text {
+  color: #184195;
+}
